--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/favicon.ico"
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
